--- a/views/index.html
+++ b/views/index.html
@@ -199,7 +199,7 @@
 										<div class="dropdown d-md-flex profile-1">
 											<a href="#" data-bs-toggle="dropdown" class="nav-link pe-2 leading-none d-flex animate">
 												<span>
-													<img src="../assets/images/faces/6.jpg" alt="profile-user"
+													<img src="/css/images/faces/6.jpg" alt="profile-user"
 														 class="avatar  profile-user brround cover-image">
 												</span>
 												<div class="text-center p-1 d-flex d-lg-none-max">
@@ -288,8 +288,8 @@
                                             class="sub-side-menu__label">Clientes</span><i
                                             class="sub-angle fa fa-angle-right"></i></a>
                                     <ul class="sub-slide-menu">
-                                        <g:link class="sub-slide-item" controller="cliente" action="index" >Clientes</g:link>
-                                        <g:link class="sub-slide-item" controller="cliente" action="create">Adicionar Clientes</g:link>
+                                        <a href="/clients.html" class="sub-slide-item">Clientes</a>
+                                        <a href="/client-create.html" class="sub-slide-item">Adicionar Cliente</a>
                                     </ul>
                                 </li>
 
