--- a/views/projects-list.html
+++ b/views/projects-list.html
@@ -6,25 +6,25 @@
 		<meta charset="UTF-8">
 		<meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=0'>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="description" content="Noa – Bootstrap 5 Admin & Dashboard Template">
 		<meta name="author" content="Spruko Technologies Private Limited">
 		<meta name="keywords" content="admin,admin dashboard,admin panel,admin template,bootstrap,clean,dashboard,flat,jquery,modern,responsive,premium admin templates,responsive admin,ui,ui kit.">
-
+	
 		<!-- FAVICON -->
-		<link rel="shortcut icon" type="image/x-icon" href="../assets/images/brand/favicon.ico" />
-
+		<!-- <link rel="shortcut icon" type="image/x-icon" href="/css/images/brand/favicon.ico"/> -->
+	
 		<!-- TITLE -->
-		<title>Noa – Bootstrap 5 Admin & Dashboard Template</title>
-
+		<title>TManger</title>
+	
 		<!-- BOOTSTRAP CSS -->
+		
 		<link id="style" href="/css/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-
 		<!-- STYLE CSS -->
-		<link href="css/style.css" rel="stylesheet"/>
-		<link href="/css/skin-modes.css" rel="stylesheet" />
-
+		<link href="/css/style.css" rel="stylesheet" />
+	
+		<link href="/css/skin-modes.css.map" rel="stylesheet" />
+	
 		<!--- FONT-ICONS CSS -->
-		<link href="/css/icons.css" rel="stylesheet"/>
+		<link href="/css/icons.css" rel="stylesheet" />
 
 	</head>
 
