refactor:building task manager

--- a/views/projects.html
+++ b/views/projects.html
@@ -290,8 +290,8 @@
 													class="sub-side-menu__label">Clientes</span><i
 													class="sub-angle fa fa-angle-right"></i></a>
 											<ul class="sub-slide-menu">
-												<a class="sub-slide-item">Clientes</a>
-												<a class="sub-slide-item">Adicionar Clientes</a>
+												<a href="/clients.html" class="sub-slide-item">Clientes</a>
+												<a href="/client-create.html" class="sub-slide-item">Adicionar Clientes</a>
 											</ul>
 										</li>
 		
@@ -310,13 +310,12 @@
 													class="sub-side-menu__label">Projectos</span><i
 													class="sub-angle fa fa-angle-right"></i></a>
 											<ul class="sub-slide-menu">
-												<a class="sub-slide-item">Projetos</a>
+												<a href="/projects.html" class="sub-slide-item">Projetos</a>
 		
-												<a class="sub-slide-item">Lista de Projetos</a>
+												<a href="/projects-list.html" class="sub-slide-item">Lista de Projetos</a>
 		
-												<a class="sub-slide-item">Detalhes do Projeto</a>
 		
-												<a class="sub-slide-item">Criar Novo Projeto</a>
+												<a href="/project-new.html" class="sub-slide-item">Criar Novo Projeto</a>
 		
 											</ul>
 										</li>
@@ -328,7 +327,7 @@
 													class="sub-angle fa fa-angle-right"></i></a>
 											<ul class="sub-slide-menu">
 		
-												<a href="tasks-list.html" class="sub-slide-item">Lista de Tarefas</a>
+												<a href="/tasks-list.html" class="sub-slide-item">Lista de Tarefas</a>
 		
 												<a href="/task-create.html" class="sub-slide-item">Criar Tarefa</a>
 		
