--- a/views/task-create.html
+++ b/views/task-create.html
@@ -289,8 +289,8 @@
 													class="sub-side-menu__label">Clientes</span><i
 													class="sub-angle fa fa-angle-right"></i></a>
 											<ul class="sub-slide-menu">
-												<g:link class="sub-slide-item" controller="cliente" action="index" >Clientes</g:link>
-												<g:link class="sub-slide-item" controller="cliente" action="create">Adicionar Clientes</g:link>
+												<a href="/clients.html" class="sub-slide-item">Clientes</a>
+												<a href="/client-create.html" class="sub-slide-item ">Adicionar Clientes</a>
 											</ul>
 										</li>
 		
