--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,6 @@
     <meta name="author" content="Spruko Technologies Private Limited">
     <meta name="keywords" content="admin,admin dashboard,admin panel,admin template,bootstrap,clean,dashboard,flat,jquery,modern,responsive,premium admin templates,responsive admin,ui,ui kit.">
 
-
 	<!-- FAVICON -->
 	<!-- <link rel="shortcut icon" type="image/x-icon" href="/css/images/brand/favicon.ico"/> -->
 
@@ -271,7 +270,7 @@
                                 <g:link class="slide-item">Registar Departamento</g:link>
                                 <g:link class="slide-item">Registar Categoria</g:link>
                                 <g:link class="slide-item">Lista de Departamento</g:link>
-                                <g:link class="slide-item">Lista de Categoria</g:link>
+                                <a href="/category-list.html" class="slide-item">Lista de Categoria</a>
                             </ul>
                         </li>
 
@@ -443,15 +442,15 @@
 							<div class="col-md-12 mb-3">
 								<div class="btn-list">
 	
-									<g:link controller="tarefa" action="create" class="btn btn-primary">
+									<a href="/task-create.html" class="btn btn-primary">
 										<svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M16,11.5h-3.5V8c0-0.276123-0.223877-0.5-0.5-0.5S11.5,7.723877,11.5,8v3.5H8c-0.276123,0-0.5,0.223877-0.5,0.5s0.223877,0.5,0.5,0.5h3.5v3.5005493C11.5001831,16.2765503,11.723999,16.5001831,12,16.5h0.0006104C12.2765503,16.4998169,12.5001831,16.276001,12.5,16v-3.5H16c0.276123,0,0.5-0.223877,0.5-0.5S16.276123,11.5,16,11.5z M12,2C6.4771729,2,2,6.4771729,2,12s4.4771729,10,10,10c5.5202026-0.0062866,9.9937134-4.4797974,10-10C22,6.4771729,17.5228271,2,12,2z M12,21c-4.9705811,0-9-4.0294189-9-9s4.0294189-9,9-9c4.9682617,0.0056152,8.9943848,4.0317383,9,9C21,16.9705811,16.9705811,21,12,21z"/></svg>
 										Nova Tarefa
-									</g:link>
+									</a>
 	
-									<g:link controller="tarefa" action="edittable" class="btn btn-info">
+									<a href="/task-edit.html" class="btn btn-info">
 										<svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M21.5,21h-19C2.223877,21,2,21.223877,2,21.5S2.223877,22,2.5,22h19c0.276123,0,0.5-0.223877,0.5-0.5S21.776123,21,21.5,21z M4.5,18.0888672h5c0.1326294,0,0.2597656-0.0527344,0.3534546-0.1465454l10-10c0.000061,0,0.0001221-0.000061,0.0001831-0.0001221c0.1951294-0.1952515,0.1950684-0.5117188-0.0001831-0.7068481l-5-5c0-0.000061-0.000061-0.0001221-0.0001221-0.0001221c-0.1951904-0.1951904-0.5117188-0.1951294-0.7068481,0.0001221l-10,10C4.0526733,12.3291016,4,12.4562378,4,12.5888672v5c0,0.0001831,0,0.0003662,0,0.0005493C4.0001831,17.8654175,4.223999,18.0890503,4.5,18.0888672z M14.5,3.2958984l4.2930298,4.2929688l-2.121582,2.121582l-4.2926025-4.293396L14.5,3.2958984z M5,12.7958984l6.671814-6.671814l4.2926025,4.293396l-6.6713867,6.6713867H5V12.7958984z"/></svg>
 										Editar Tarefa
-									</g:link>
+									</a>
 								</div>
 							</div>
 							<div class="col-md-12">
