refactor: adding list category and departament page.

--- a/views/tasks-list.html
+++ b/views/tasks-list.html
@@ -310,13 +310,11 @@
                                             class="sub-side-menu__label">Projectos</span><i
                                             class="sub-angle fa fa-angle-right"></i></a>
                                     <ul class="sub-slide-menu">
-                                        <g:link controller="projecto" action="#" class="sub-slide-item">Projetos</g:link>
+                                        <a href="/projects.html" class="sub-slide-item">Projetos</a>
 
-                                        <g:link controller="projecto" action="index" class="sub-slide-item">Lista de Projetos</g:link>
+                                        <a href="/projects-list.html" class="sub-slide-item">Lista de Projetos</a>
 
-                                        <g:link controller="projecto" action="" class="sub-slide-item">Detalhes do Projeto</g:link>
-
-                                        <g:link controller="projecto" action="create" class="sub-slide-item">Criar Novo Projeto</g:link>
+                                        <a href="/project-new.html" class="sub-slide-item">Criar Novo Projeto</a>
 
                                     </ul>
                                 </li>
