refactor:adding edit category and departament page

--- a/views/edit-category.html
+++ b/views/edit-category.html
@@ -269,10 +269,10 @@
 									</a>
 									<ul class="slide-menu">
 										<li class="side-menu-label1"><a href="javascript:void(0)">Registo</a></li>
-										<a href="/register-departament.html" class="slide-item">Registar Departamento</a>
-										<a href="/register-category.html" class="slide-item">Registar Categoria</a>
-										<a href="/list-departament.html" class="slide-item">Lista de Departamento</a>
-										<a href="/list-category.html" class="slide-item">Lista de Categoria</a>
+										<g:link class="slide-item">Registar Departamento</g:link>
+										<g:link class="slide-item">Registar Categoria</g:link>
+										<g:link class="slide-item">Lista de Departamento</g:link>
+										<g:link class="slide-item">Lista de Categoria</g:link>
 									</ul>
 								</li>
 		
@@ -354,13 +354,13 @@
 							<!-- PAGE-HEADER -->
 							<div class="page-header">
 								<div>
-									<h1 class="page-title">Departamento do Projeto</h1>
+									<h1 class="page-title">Categoria da Terefa</h1>
 								</div>
 								<div class="ms-auto pageheader-btn">
 									<ol class="breadcrumb">
 										<li class="breadcrumb-item">Aplicativos</li>
-										<li class="breadcrumb-item"><a href="javascript:void(0);">Departamento</a></li>
-										<li class="breadcrumb-item active" aria-current="page">Adicionar Departamento</li>
+										<li class="breadcrumb-item"><a href="javascript:void(0);">Categoria</a></li>
+										<li class="breadcrumb-item active" aria-current="page">Adicionar Categoria</li>
 									</ol>
 								</div>
 							</div>
@@ -371,7 +371,7 @@
 								<div class="col-lg-12 col-md-12">
 									<div  class="card">
 										<div class="card-header border-bottom">
-											<h4 class="mb-0">Informações do Departamento do Projeto</h4>
+											<h4 class="mb-0">Informações da categoria da Terefa</h4>
 										</div>
 										<div class="card-body p-0 task-edit-main">
 											<!-- <div class="row p-5 border-bottom">
@@ -384,18 +384,18 @@
 												</div>
 												<div class="col-sm-12 col-md-12 col-xl-4">
 													<div class="form-group">
-														<label class="form-label text-muted">Departamento:</label>
+														<label class="form-label text-muted">Categoria da Terefa:</label>
 														<div class="input-group" id="company-name">
-															<input type="text" class="form-control text-dark" placeholder="Insira  o Departamento do Projecto">
+															<input type="text" class="form-control text-dark" placeholder="Insira  a categoria da Tarefa">
 														</div>
 													</div>
 												</div>
 											
 												<div class="col-sm-12 col-md-12 col-xl-3">
 													<div class="form-group">
-														<label class="form-label text-muted">Número dos colaboradores</label>
+														<label class="form-label text-muted">Número da categoria</label>
 														<div class="input-group" id="company-phonenumber">
-															<input type="number" class="form-control text-dark" placeholder="12">
+															<input type="number" class="form-control text-dark" placeholder="Digite o numero da categoria">
 														</div>
 													</div>
 												</div>
@@ -403,8 +403,8 @@
 											</div>
 											<div class="row p-5">
 												<div class="btn-list text-end">
-													<button class="btn btn-outline-danger"> <i class="fe fe-x-circle"></i> Cancelar</button>
-													<button class="btn btn-primary"> <i class="fe fe-check-circle"></i> Gravar</button>
+													
+													<button class="btn btn-primary"> <i class="fe fe-check-circle"></i> Atualizar</button>
 												</div>
 											</div>
 										</div>
