--- a/views/edit-departament.html
+++ b/views/edit-departament.html
@@ -271,8 +271,8 @@
 										<li class="side-menu-label1"><a href="javascript:void(0)">Registo</a></li>
 										<a href="/register-departament.html" class="slide-item">Registar Departamento</a>
 										<a href="/register-category.html" class="slide-item">Registar Categoria</a>
-										<a href="/list-departament.html" class="slide-item">Lista de Departamento</a>
-										<a href="/list-category.html" class="slide-item">Lista de Categoria</a>
+										<a href="" class="slide-item">Lista de Departamento</a>
+										<a href="" class="slide-item">Lista de Categoria</a>
 									</ul>
 								</li>
 		
@@ -403,8 +403,8 @@
 											</div>
 											<div class="row p-5">
 												<div class="btn-list text-end">
-													<button class="btn btn-outline-danger"> <i class="fe fe-x-circle"></i> Cancelar</button>
-													<button class="btn btn-primary"> <i class="fe fe-check-circle"></i> Gravar</button>
+													
+													<button class="btn btn-primary"> <i class="fe fe-check-circle"></i> Atualizar</button>
 												</div>
 											</div>
 										</div>
