--- a/views/register-category.html
+++ b/views/register-category.html
@@ -269,10 +269,10 @@
 									</a>
 									<ul class="slide-menu">
 										<li class="side-menu-label1"><a href="javascript:void(0)">Registo</a></li>
-										<g:link class="slide-item">Registar Departamento</g:link>
-										<g:link class="slide-item">Registar Categoria</g:link>
-										<g:link class="slide-item">Lista de Departamento</g:link>
-										<g:link class="slide-item">Lista de Categoria</g:link>
+										<a href="/register-departament.html" class="slide-item">Registar Departamento</a>
+										<a href="/register-category.html" class="slide-item">Registar Categoria</a>
+										<a href="/list-departament.html" class="slide-item">Lista de Departamento</a>
+										<a href="/list-category.html" class="slide-item">Lista de Categoria</a>
 									</ul>
 								</li>
 		
