refactor my code

--- a/TManeger/src/views/task-create.html
+++ b/TManeger/src/views/task-create.html
@@ -553,11 +553,11 @@
 			<!-- FOOTER -->
 			<footer class="footer">
 				<div class="container">
-					<!-- <div class="row align-items-center flex-row-reverse">
+					<div class="row align-items-center flex-row-reverse">
 						<div class="col-md-12 col-sm-12 text-center">
-							Copyright © 2023 <a href="#">Intellica</a>. Designed with <span class="fa fa-heart text-danger"></span> by <a href="#"> Wilson Jorge </a> All rights reserved
+							Copyright © 2023 <a href="#">Intellica</a>. Designed with <span class="fa fa-heart text-danger"></span> by <a href="#"> Wilson Jorge Macuaca </a> All rights reserved
 						</div>
-					</div> -->
+					</div>
 				</div>
 			</footer>
 			<!-- FOOTER CLOSED -->
