--- a/TManeger/src/views/terms.html
+++ b/TManeger/src/views/terms.html
@@ -14,7 +14,7 @@
 		<link rel="shortcut icon" type="image/x-icon" href="../assets/images/brand/favicon.ico" />
 
 		<!-- TITLE -->
-		<title>Noa – Bootstrap 5  Admin & Dashboard Template</title>
+		<title></title>
 
 		<!-- BOOTSTRAP CSS -->
 		<link id="style" href="../assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
