--- a/TManeger/src/views/tasks-list.html
+++ b/TManeger/src/views/tasks-list.html
@@ -689,7 +689,7 @@
 	<script>
 		   async function buscarTarefas() {
   try {
-    const resposta = await fetch('URL_DO_SEU_BACKEND/tarefas', {
+    const resposta = await fetch('', {
       method: 'GET',
       headers: {
         'Content-Type': 'application/json',
