--- a/TManeger/src/views/task-create.html
+++ b/TManeger/src/views/task-create.html
@@ -564,7 +564,7 @@
 		</div>
 
 		<!-- BACK-TO-TOP -->
-		<a href="#top" id="back-to-top"><i class="fa fa-long-arrow-up"></i></a>
+		<!-- <a href="#top" id="back-to-top"><i class="fa fa-long-arrow-up"></i></a> -->
 
 		<!-- JQUERY JS -->
 		<script src="/js/jquery.min.js"></script>
